--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "lucide-react": "^0.501.0",
@@ -20,7 +25,6 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "toastify": "^2.0.1",
-
     "web-vitals": "^2.1.4"
   },
   "scripts": {
