--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@fullcalendar/daygrid": "^6.1.17",
+    "@fullcalendar/google-calendar": "^6.1.17",
+    "@fullcalendar/react": "^6.1.17",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
+    "@react-oauth/google": "^0.12.2",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
@@ -14,6 +18,7 @@
     "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.501.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.9",
