--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@toolpad/core": "^0.14.0",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.501.0",
     "react": "^19.1.0",
@@ -30,7 +31,8 @@
     "react-toastify": "^11.0.5",
     "slick-carousel": "^1.8.1",
     "toastify": "^2.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
