--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@toolpad/core": "^0.14.0",
+    "@xenova/transformers": "^2.17.2",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "date-fns": "^4.1.0",
