--- a/package.json
+++ b/package.json
@@ -35,11 +35,13 @@
     "react-circular-progressbar": "^2.2.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.5.1",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
     "recharts": "^2.15.3",
+    "rehype-sanitize": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "tailwindcss": "^4.1.8",
     "toastify": "^2.0.1",
